# ssbc-sip

./: Cargo.toml  REFACTORING_SUMMARY.md  add_context_fields.sh  fix_all_parse_errors.py  fix_errors.sh  fix_ssbc_errors_final.py  fix_state_errors.py
benches/: pool_benchmark.rs  ssbc_performance.rs  zero_copy_benchmark.rs
examples/: pool_demo.rs  refactored_demo.rs
src/: b2bua.rs  b2bua_enhanced.rs  benchmark.rs  error.rs  headers.rs  lib.rs  limits.rs  main.rs  main_impl.rs  modification.rs  parsing.rs  pool.rs  sdp.rs  types.rs  validation.rs  zero_copy.rs
tests/: b2bua_enhanced_tests.rs  integration_test.rs  pool_integration_test.rs  real_world_pcap_tests.rs  sip_routing_tests.rs
